--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser-arcade-physics.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Snake Game!</title>
 </head>
 <body>
-    <h1>Snake Game!</h1>
+    <section>
+        <h1>Snake Game!</h1>
+        <p class="points">Pontuação: 0</p>
+    </section>
     <div id="phaser-game"></div>
     <script type="module" src="js/singlephase.js"></script>
 </body>
